QFileSystemWatcher: Do not require QApplication in the destructor.

QThread::quit() is threadsafe, and can safely (and should) be called
from the parent thread.
Using invokeMethod requires an instance of QCoreApplication. There
is no reason we should depend on that.

Task-number: QTBUG-15255
Task-number:  QT-3305
Reviewed-by: Denis
Reviewed-by: Brad